--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="img/site_logo.png" type="image/gif" sizes="16x16">
   <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
   <title>Jalan-Jalan Yuk</title>
   <!-- styles -->
-  <link rel="stylesheet" href="styles.css">
+  <!-- <link rel="stylesheet" href="styles.css"> -->
+  <link rel="stylesheet" media="screen and (min-width: 600px)" href="widescreen.css">
+  <link rel="stylesheet" media="screen and (max-width: 600px)" href="smallscreen.css">
 </head>
 <body>
   <!-- navigation -->
   <nav>
     <div class="logo">
-      <a href="index.html">
+      <a href="#top">
       <div class="logo"><img src="./img/site_logo.png" alt="logo" id="logo_image"></div>
       </a>
       <h4>Jalan-Jalan Yuk</h4>
@@ -50,7 +53,7 @@
   </nav>
   <!-- ./navigation -->
 
-<div class="main-page">
+<div class="main-page" id="top">
 <!-- hero -->
 <div class="banner">
   <div class="container">
