biar webnya updated

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <!-- text paket -->
       <div class="paket-text">
         <!-- <p>
-          Ini dia paket spesial ke Eropa.
+          Ini dia paket spesial ke Eropa. wuhu
         </p> -->
         <div class="group-negara">
           <div class="negara shop-item perancis">
