slider belom jadi

--- a/index.html
+++ b/index.html
@@ -63,11 +63,84 @@
         Dapatkan berbagai paket liburan eksklusif hanya di Jalan-Jalan Yuk. Atur destinasi sesuai keinginanmu dan rasakan pengalaman berlibur yang tidak pernah kamu alami sebelumnya.
       </p>
       <!-- <h6 class="photo-attribution">Photo by Leah Kelley from Pexels</h6> -->
-
-
     </div>
   </div>
 </div>
+
+<div class="slider">
+  <div class="slide current">
+    <div class="content">
+      <h1>Slide One</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ab ad alias, veritatis inventore quia!</p>
+    </div>
+  </div>
+  <div class="slide">
+    <div class="content">
+      <h1>Slide Two</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ab ad alias, veritatis inventore quia!</p>
+    </div>
+  </div>
+  <div class="slide">
+    <div class="content">
+      <h1>Slide Three</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ab ad alias, veritatis inventore quia!</p>
+    </div>
+  </div>
+  <div class="slide">
+    <div class="content">
+      <h1>Slide Four</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique ab ad alias, veritatis inventore quia!</p>
+    </div>
+  </div>
+</div>
+<div class="buttons">
+  <div id="prev"><i class="fa fa-arrow-left" aria-hidden="true"></i></div>
+  <div id="next"><i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+</div>
+
+<!-- 
+<div class="slider">
+  <div class="slides"> -->
+    <!-- radio buttons -->
+    <!-- <input type="radio" name="radio-btn" id="radio1">
+    <input type="radio" name="radio-btn" id="radio2">
+    <input type="radio" name="radio-btn" id="radio3">
+    <input type="radio" name="radio-btn" id="radio4"> -->
+    <!-- radio buttons -->
+
+    <!-- slide images -->
+    <!-- <div class="slide first">
+      <img src="./img/slider1.jpg" alt="slider1">
+    </div>
+    <div class="slide">
+      <img src="./img/slider2.jpg" alt="slider1">
+    </div>
+    <div class="slide">
+      <img src="./img/slider3.jpg" alt="slider1">
+    </div>
+    <div class="slide">
+      <img src="./img/slider4.jpg" alt="slider1">
+    </div> -->
+    <!-- ./slide images -->
+
+    <!-- automatic navigation -->
+    <!-- <div class="navigation-auto">
+      <div class="auto-btn1"></div>
+      <div class="auto-btn2"></div>
+      <div class="auto-btn3"></div>
+      <div class="auto-btn4"></div>
+    </div> -->
+    <!-- ./automatic navigation -->
+  <!-- </div> -->
+  <!-- manual navigation -->
+  <!-- <div class="navigation-manual">
+    <label for="radio1" class="manual-btn"></label>
+    <label for="radio2" class="manual-btn"></label>
+    <label for="radio3" class="manual-btn"></label>
+    <label for="radio4" class="manual-btn"></label>
+  </div>
+
+</div> -->
 
 <!-- ./hero -->
 
